--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
 .App {
+  display: flex;
+  height: 100vh;
+}
+
+body {
+  background: #fff;
+  color: black;
+  max-width: 400px;
+  padding: 1rem;
+}
+
+.number-box {
+  border: 1px solid black;
+  padding: 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 10px;
+}
+
+h2 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.generate-task {
+  border: 1px solid black;
+  padding: 10px;
+  flex: 0 0 auto;
+  width: 300px;
+  max-height: 500px;
+  margin-right: 5px;
+  overflow-y: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.queue-box {
+  border: 1px solid black;
+  padding: 10px;
+  width: 100vh;
+  margin-top: 1px;
+  margin-bottom: 5px;
 }
