--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
 
@@ -11,7 +10,6 @@
 body {
   background: #fff;
   color: black;
-  max-width: 400px;
   padding: 1rem;
 }
 
@@ -23,6 +21,8 @@ body {
   align-items: center;
   text-align: center;
   margin-top: 10px;
+  border-radius: 5px;
+  background-color: white;
 }
 
 h2 {
@@ -30,19 +30,42 @@ h2 {
 }
 
 .generate-task {
-  border: 1px solid black;
   padding: 10px;
   flex: 0 0 auto;
   width: 300px;
-  max-height: 500px;
+  max-height: 600px;
   margin-right: 5px;
   overflow-y: auto;
+  border-radius: 5px;
+  background-color: #b9d9eb;
+  font-family: "Trebuchet MS", sans-serif;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .queue-box {
-  border: 1px solid black;
   padding: 10px;
   width: 100vh;
+  height: 145px;
   margin-top: 1px;
   margin-bottom: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+  background-color: #dffffd;
+}
+
+.center-button {
+  margin: 10px;
+}
+
+.queue-progress {
+  height: 20px;
+  background-color: lightgray;
+  margin-top: 5px;
+  position: relative;
+}
+
+.queue-progress-fill {
+  height: 100%;
+  background-color: green;
+  transition: width 0.1s ease-in;
 }
