minor css changes, added comments for notes 2 self

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,9 @@ h2 {
 
 .center-button {
   margin: 10px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .progress-bar-fill {
